Reorganizacao Geral dos arquivos